--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,7 +15,7 @@
 
 .badge-default {
   background-color: #2bbbad !important;
-  padding: 0.25em 0.4em !important;
+  padding: 0.25em !important;
 }
 
 @media (max-width: 1080px) {
