--- a/app/views/layouts/partials/_footer.html.erb
+++ b/app/views/layouts/partials/_footer.html.erb
@@ -92,7 +92,7 @@
   <!-- Raptive - Disable ads -->
   <script>
     window.adthrive.cmd.push(function() {
-      window.adthrive.disableAds(['/edit', '/interviews', '/interviews/*', '/new', '/pitches/*', '/pitches', '/dashboard', '/partners/*', '/pages/*', '/editors/*', '/apply', '/about-us']);
+      window.adthrive.disableAds(['/edit', '/onboarding', '/interviews', '/interviews/*', '/new', '/pitches/*', '/pitches', '/dashboard', '/partners/*', '/writers/*', '/pages/*', '/editors/*', '/apply', '/about-us']);
     });
   </script>
 </footer>
