--- a/app/views/posts/_published.html.erb
+++ b/app/views/posts/_published.html.erb
@@ -144,5 +144,5 @@
   });
 </script>
 <% if !(@post.comments_turned_off.eql? true) %>
-  <%= javascript_include_tag "plugins/index_bundle" %>
+  <%= javascript_include_tag "selectable_text" %>
 <% end %>
