--- a/app/assets/stylesheets/_posts_projects.css.scss
+++ b/app/assets/stylesheets/_posts_projects.css.scss
@@ -268,6 +268,16 @@
   }
 }
 
+.share_article_feedback_wide {
+  min-width: 420px;
+  max-width: 420px;
+  z-index: 30;
+  margin: 240px 0 0 20px;
+  img {
+    width: 100%;
+  }
+}
+
 .flex_wrapper_posts {
   max-width: 1300px;
   margin: 0 auto;
@@ -284,7 +294,9 @@
 .content_wrapper {
   max-width: 840px;
 }
-
+.content_wrapper.draft {
+  max-width: 100%;
+}
 .skinny {
   margin-left: 100px;
   margin-right: 100px;
