--- a/app/assets/stylesheets/writer.css.scss
+++ b/app/assets/stylesheets/writer.css.scss
@@ -89,7 +89,7 @@ a {
 
 .badge-default {
   background-color: #2bbbad !important;
-  padding: 0.25em 0.4em !important;
+  padding: 0.25em !important;
 }
 
 .theimages,
@@ -383,13 +383,9 @@ a {
 }
 
 .review_frm {
-  background-color: #fffbda;
-  margin-bottom: 1.5em;
-  h6 {
-    font-family: "Univers-CnUlt", "Arial", "Sans-serif";
-  }
-  b {
-    color: #f0255e;
+  background-color: #fec;
+  p, li {
+    font-size: 20px;
   }
   hr {
     margin: 20px -20px;
@@ -407,8 +403,6 @@ a {
     margin: 10px 0;
   }
   .card-text {
-    font-size: 15px;
-    font-style: italic;
     color: #757575;
   }
 }
