--- a/app/views/applies/show.html.erb
+++ b/app/views/applies/show.html.erb
@@ -64,7 +64,7 @@
     <%= f.hidden_field :apply_id, value: @application.id %>
     <%= link_to "Delete", apply_path(@application), style: "float: right;", class: "mt-4", method: :delete, data: {confirm: "Are you sure you want to delete this application?"} %>
     <%= f.submit 'Accept', class: "mt-2", name: "decision", value: "Accept" %>
-    <%= f.submit 'Reject', class: "mt-2", name: "decision", value: "Reject" %>
+    <%= f.submit 'Reject', class: "mt-2", name: "decision", value: "Rejected" %>
   <% end %>
   <br>
 </div>
