--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -11,7 +11,7 @@
   <%= f.text_field :name %>
   <br><%= f.label "Meta Description" %><br>
   <%= f.text_field :description %>
-  <br><%= f.label "Managing Editor Slug ID (last part of url on their profile)" %><br>
+  <br><%= f.label "Managing Editor username (last part of url on their profile)" %><br>
   <% @user = @category.user.present? ? @category.user.slug : '' %>
   <%= f.text_field 'managing_editor', value: @user, placeholder: current_user.slug %>
   <br><%= f.label "Color Theme" %><span>(hex code) see https://htmlcolorcodes.com/ for colors or install a color picker on chrome to get the color code.</span><br>
