--- a/app/views/posts/editor-review/_editor_review.html.erb
+++ b/app/views/posts/editor-review/_editor_review.html.erb
@@ -27,7 +27,7 @@
 <div class="flex_wrapper_posts mb-4">
   <div class="wrapper_padding" id="post_show_content">
     <div class="flex_wrapper_columns">
-      <div class="content_wrapper">
+      <div class="content_wrapper draft">
         <header id="post_title_show">
           <div class="title_wrapper">
             <% if @thumbanil_credits && @thumbanil_credits.length > 0 %>
@@ -71,6 +71,7 @@
               </p>
             </div>
           </div>
+          <% @authors = [@user] + @collabs %>
           <div style="<% if @authors.length.eql? 1 %>height: 58px;<% else %>max-height: <%= 10 + @authors.length * 48 %>px<% end %>" class="post_info d-flex pt-2 flex-wrap overflow-hidden align-items-center justify-content-between">
             <div class="d-flex flex-wrap">
               <% @authors.each do |author| %>
@@ -101,92 +102,41 @@
         </header>
         <div id="content">
           <div class="flex_wrapper_content">
-            <div class="post_wrapper">  
-              <% if (@post.user_id.eql? current_user&.id) || current_user&.editor %>
-                <% if @requested_changes.present? %>
-                  <div class="card m-0 mt-3 changes_requested">
-                    <% @editor = User.find(@most_recent_review.editor_id) %>
-                    <div class="card-header">
-                      Review given by <%= link_to(@editor.try(:full_name), @editor, :class => "link_nrml", :target => "_blank") %>: The below problems prevented this article from being published.
-                      <%= link_to send_user_email_path(:recipient_id =>  @most_recent_review.editor_id), class: "link_nrml_underline", target: "_blank" do %>
-                        Contact Editor
-                      <% end %>
-                    </div>
-                    <div class="card-body">
-                      <% @requested_changes.each do |requested_change| %>
-                        <% @feedback = Feedback.find(requested_change.feedback_id) %>
-                        <h5 class="card-title">✎ <%= @feedback.try(:editor_descr) %></h5>
-                        <p class="card-text"><small><%= markdown @feedback.try(:review_descr) %></small></p>
-                      <% end %>
-                    </div>
-                  </div>
-                <% end %>
-              <% end %>
-              <div id="selectable_content"
-                   class="post_content <%= (@post.agree_to_image_policy.nil? || !@post.agree_to_image_policy) ? 'image-policy-not-agreed-to' : '' %>">
-                <%= markdown @post.content %>
-              </div>
-              <% if params[:shareable_token].nil? %>
-                <% if current_user && current_user.can_edit_post(@post) %>
-                  <div id="admin_links" style="border-top: 1px solid #E9E9E9;border-bottom: 1px solid #E9E9E9;text-align: center;padding: 1em 0;margin: 1em 0;margin-top: 0;">
-                    <% if !(@post.is_locked?) %>
-                      <%= link_to "Edit Article", edit_post_path(@post), style: "text-decoration: none;color: #9a9da4;margin: 0 1em;font-weight: 700;font-size: .8em;text-transform: uppercase;font-family: inherit;" %>
-                    <% end %>
-                    <% if current_user && (current_user.id == @post.user_id || current_user.admin) %>
-                      <%= link_to "Delete", post_path(@post), method: :delete, data: {confirm: "Are you sure you want to delete this article?"}, style: "text-decoration: none;color: #9a9da4;margin: 0 1em;font-weight: 700;font-size: .8em;text-transform: uppercase;font-family: inherit;" %>
-                    <% end %>
-                  </div>
-                  <% if @post.is_interview? %>
-                    <%= render "posts/partials/shareable_link", shareable_token: @post.shareable_token %>
+            <div class="post_wrapper">
+              <%= form_for @post, html: {:id => "ck-form", class: "mt-3"} do |f| %>
+                <%= hidden_field_tag :quick_edit, false, id: "format-js-field" %>
+                <div class="d-flex justify-content-end mb-1">
+                  <%= f.button id: "unsaved-changes", class: "hide" do %>
+                    <span id="unsaved-changes-text">Save Edits</span>
                   <% end %>
+                </div>
+                <% if @review.notes.present? %>
+                  <div class="alert alert-danger" role="alert">
+                    You previously reviewed this article but the second editor did not think it was ready to be published. Please re-review this article and message in the Discord if you need help. 
+                  </div>
+                  <div class="mb-2"><b>Notes from <%= link_to(@requested_review_user&.full_name, @requested_review_user) %></b>: <%= @review.notes %></b></div>
+                <% end %>
+                <div id="selectable_content" class="mb-3">
+                  <% if @post.editor_can_make_changes %>
+                    <%= f.text_area :content, value: @post.content, id: "editor" %>
+                  <% else %>
+                    <div class="alert alert-warning" role="alert">
+                      The author has not allowed you to make changes to this article.
+                    </div>
+                    <%= markdown @post.content %>
+                  <% end %>
+                </div>
+                <%= f.fields_for :reviews, @review do |rv| %>
+                  <%= render "posts/editor-review/editor_review_form", rv: rv, f: f, post: @post %>
                 <% end %>
               <% end %>
-              <div id= "background">
-                <%= render :partial => 'users/profile', locals: {user: @post.user} %>
-                <% @collabs.each do |collab| %>
-                  <%= render :partial => 'users/profile', locals: {user: collab} %>
-                <% end %>
-              </div>
             </div>
           </div>
         </div>
       </div>
-      <% if params[:shareable_token].nil? %>
-        <div id="comments" class="share_article_feedback share_article_feedback_wide">
-          <% if @post.partner_id.present? %>
-            <%= render :partial => 'posts/partials/comments/partner_comments', locals: {partner: @partner, post: @post, comments: @comments, comment: @comment} %>
-          <% else %>
-            <% if @post.is_being_reviewed? %>
-              <% if @post.is_in_review? %>
-                <span>
-                  <%= link_to(@editor&.full_name, @editor) %> started reviewing your article <%= date_to_words(@post.most_recent_review.editor_claimed_review_at) %>.
-                  You can <%= link_to send_user_email_path(:recipient_id =>  @editor.id), class: "link_nrml_underline", target: "_blank" do %>
-                    contact <%= @editor.first_name %>
-                  <% end %> if you need to ask them any questions.
-                </span>
-              <% else %>
-                <p>
-                  Peer comments are turned off while your article is waiting to be reviewed. 
-                </p>
-              <% end %>
-            <% elsif @post.sharing %>
-              <p>This draft is currently viewable by other writers in the <a target="_blank" href="/community">community</a>.
-                <% if (current_user.admin? || current_user.id == @post.user_id) %>
-                  <%= link_to "Turn off peer sharing.", post_path(@post, sharing: false), class: "link_grn" %>
-                <% end %>
-              </p>
-            <% elsif (current_user.admin? || current_user.id == @post.user_id) %>
-              <p>This draft is not viewable by other writers.
-                <%= link_to "Get peer feedback.", post_path(@post, sharing: true), class: "link_grn" %>
-              </p>
-            <% end %>
-            <%= render :partial => 'posts/partials/comments/comments_draft', locals: {user: current_user, post: @post, comments: @comments, comment: @comment} %>
-          <% end %>
-        </div>
-      <% else %>
-        <%= render 'posts/partials/side_bar_published', post: @post %>
+      <div id="comments" class="share_article_feedback share_article_feedback_wide">
+        <%= render :partial => 'posts/partials/comments/comments_draft', locals: {user: current_user, post: @post, comments: @comments, comment: @comment} %>
       </div>
-    <% end %>
   </div>
 </div>
 </div>
@@ -209,4 +159,77 @@
     <% end %>
   };
 </script>
-<%= javascript_include_tag "selectable_text" %>
+<script type="text/javascript">
+  $('document').ready(function(){
+    $("#ck-form").on("submit", function(event){
+      unsaved = false;
+      var reply = true;
+      var selected = document.getElementById('post_reviews_attributes_0_status').value;
+      var editor_comments = document.getElementsByClassName('editor-<%= @post.most_recent_review.editor_id %>');
+      var checked = $("input[type=checkbox]:checked").length;
+      if (selected == "Rejected") {
+        if (checked == 0) {
+          reply=confirm("You need to select at least one reason for rejecting this article.");
+          return false;
+        } else if (checked > 3) {
+          reply=confirm("Please only select the top 3 reasons for rejection to not overwhelm the writer.");
+          return false
+        } else if (editor_comments.length < 1) {
+          reply=confirm("Please leave at least one comment.");
+          return false;
+        }
+      } else if (selected == "Approved for Publishing") {
+        <% if !(@post.most_recent_review.status.eql? "Approved for Publishing") %>
+          reply=confirm("This article will be published to the homepage. Are you sure you want to continue?");
+        <% end %>
+      } else if (selected == "Recommend for Publishing") {
+        if (editor_comments.length < 1) {
+          reply=confirm("Please leave at least one comment.");
+          return false;
+        }
+        <% if !(@post.most_recent_review.status.eql? "Recommend for Publishing") %>
+          reply=confirm("Another editor will check to make sure this article is ready to be published. Are you sure you want to continue?");
+        <% end %>
+      } else if (selected == "Request Re-Review") {
+        <% if !(@post.most_recent_review.status.eql? "Request Re-Review") %>
+          reply=confirm("This article will be sent to the editor who reviewed it last.");
+        <% end %>
+      } else if (selected == "In Review") {
+        <% if !(@post.most_recent_review.status.eql? "In Review") %>
+          reply=confirm("You are claiming this article review. You have two days to either approve or request changes to this article.");
+        <% end %>
+      } else if (selected == "Ready for Review") {
+        <% if !(@post.most_recent_review.status.eql? "Ready for Review") %>
+          <% if (@post.most_recent_review.status.eql? "In Review") %>
+            reply=confirm("You are moving this article out of review.");
+          <% else %>
+            <%= @count = 5 - @post.reviews.where(status: "Rejected").count %>
+            reply=confirm("You have <%= @count %> reviews remaining for this article. Are you sure you want to continue?");
+          <% end %>
+        <% end %>
+      } else if (selected == "In Progress") {
+        <% if (@post.most_recent_review.status.eql? "Ready for Review") %>
+          reply=confirm("You are unsubmitting this article for review.");
+        <% end %>
+      }
+      return reply;
+    });
+  });
+  window.WEBSPELLCHECKER_CONFIG = {
+    autoSearch: true,
+    serviceId: "<%= ENV["WEBSPELLCHECKER_ID"] %>"
+  };
+</script>
+<%= javascript_include_tag 'ckeditor' %>
+<%= javascript_include_tag 'selectable_text' %>
+<script>
+  $(document).ready(function() {
+    // Handle form submission
+    $('#unsaved-changes').click(function(event) {
+      event.preventDefault(); // Prevent default form submission behavior
+      $('#format-js-field').val("true");
+      // Submit the form
+      $('#ck-form').submit();
+    });
+  });
+</script>
