--- a/app/views/posts/partials/comments/_comments_draft.html.erb
+++ b/app/views/posts/partials/comments/_comments_draft.html.erb
@@ -1,9 +1,10 @@
-<h3>Peer comments and reviews</h3>
 <div class="comments">
   <%= render :partial => 'comments/comment_form', locals: {post: post, comment: comment, user: user } %>
   <ul class="list-group list-group-flush" id="list-group-comments">
     <% comments.each do |comment| %>
-      <%= render :partial => 'comments/comment', locals: {comment: comment, post: post} %>
+      <% if current_user.editor? || !comment.is_review || (post.user_id.eql? current_user.id) %>
+        <%= render :partial => 'comments/comment', locals: {comment: comment, post: post} %>
+      <% end %>
     <% end %>
   </ul>
 </div>
