--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -77,6 +77,12 @@
         <a class="tab-custom" id="all-comments-tab-classic" data-bs-toggle="tab" href="#all-comments-classic" role="tab"
           aria-controls="all-comments-classic" aria-selected="false">Recent Comments</a>
       </li>
+      <% if current_user.is_manager? %>
+        <li class="nav-item tab-custom">
+          <a class="tab-custom" id="all-review-comments-tab-classic" data-bs-toggle="tab" href="#all-review-comments-classic" role="tab"
+            aria-controls="all-review-comments-classic" aria-selected="false">Editor Comments (admin only)</a>
+        </li>
+      <% end %>
     </ul>
   </div>
   <!-- Classic tabs -->
@@ -125,6 +131,15 @@
     </div>
     <div class="tab-pane fade" id="all-comments-classic" role="tabpanel" aria-labelledby="all-comments-tab-classic">
       <%= render_async get_all_comments_path, toggle: { selector: '#all-comments-tab-classic', event: :click } do %>
+        <div class="d-flex justify-content-center">
+          <div class="spinner-border mb-4" role="status">
+            <span class="sr-only">Loading...</span>
+          </div>
+        </div>
+      <% end %>
+    </div>
+    <div class="tab-pane fade" id="all-review-comments-classic" role="tabpanel" aria-labelledby="all-review-comments-tab-classic">
+      <%= render_async get_all_review_comments_path, toggle: { selector: '#all-review-comments-tab-classic', event: :click } do %>
         <div class="d-flex justify-content-center">
           <div class="spinner-border mb-4" role="status">
             <span class="sr-only">Loading...</span>
