--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,7 +42,7 @@
     <%= stylesheet_link_tag params[:controller] %>
     <%= stylesheet_link_tag 'application'  %>
     <%= javascript_include_tag 'application'%>
-    <%= javascript_include_tag 'layout', cache: false %>
+    <%= javascript_include_tag 'layout' %>
     <% if params[:controller].eql? 'posts' %>
         <%= javascript_include_tag 'hidesocialmedia', cache: false %>
     <% end %>
